--- a/related.tex
+++ b/related.tex
@@ -1,8 +1,8 @@
 \section{Related Work}
 \label{sec:related}
 
-In this section, we highlight the prominent work on attacks and attack detection in the area of P2P video streaming systems.
-Previous work considered three types of attacks: (i) pollution attacks, i.e., flooding the overlay with arbitrary content and claiming it to be relevant video chunks, (ii) free riding, i.e., participating in the overlay without contributing, and iii) cheating attacks, i.e., attacks that maliciously drop packets or manipulate buffer-maps. 
+In this section, we highlight the prominent work on attacks and attack detection in the area of P2P streaming systems.
+Previous work considered three types of attacks: (i) pollution attacks, i.e., flooding the overlay with arbitrary content and claiming it to be relevant chunks, (ii) free riding, i.e., participating in the overlay without contributing, and iii) cheating attacks, i.e., maliciously dropping packets or manipulating buffer-maps. 
 
 Pollution attacks are one of the most common attacks \cite{pollution1}. 
 As the attack strategy differs from the \drop attack and efficient network coding techniques \cite{nc} and others \cite{pollution2} already exist, we do not consider those attacks in our work.
