--- a/related.tex
+++ b/related.tex
@@ -16,7 +16,7 @@ However, these strategies are only effective for peers that aim to minimize thei
 
 % Hatem: trim
 % Cheating attacks are severe denial-of-service attacks, performed with the goal of maximizing the damage to the overlay and preventing peers from downloading the video.   
-Cheating attacks are severe DoS attacks, performed to maximize the damage to the overlay and preventing peers from downloading the video.   
+Cheating attacks are severe DoS attacks, performed to maximize the damage to the overlay and preventing peers from downloading the stream.   
 \textit{Antiliar} is a general defense mechanism against a diverse set of attacks, including dropping and buffer map manipulation\cite{antiliar}.
 Mainly, \textit{Antiliar} tracks peers behaviors in a secure progress log and thus, detecting misbehaving peers by identifying irregularities in the log. 
 While highly effective, \textit{Antiliar} relies on expensive cryptographic operations that are unsuitable for devices with low CPU resources.
