--- a/introduction.tex
+++ b/introduction.tex
@@ -1,49 +1,41 @@
 \section{Introduction}
 \label{sec:intro}
 
-Streaming content is an essential aspect of today's data driven infrastructure \cite{emule}.
-Most streaming applications rely on central providers that have significant resources at their hands and hence distribute content to a large audience in a fast and reliable manner. 
-However, these enormous costs of guaranteeing high quality-of-service when streaming impede alternative providers and content, entailing oligopolies.
-Controlling or influencing these few highly visible providers might allow censorship or propaganda, giving powerful parties the opportunity  to dictate the public opinion and undermine freedom of speech.
-% \mn[Stef]{feel free to remove the censorship/propaganda aspect}   
-Distributing content via a Peer-to-Peer (P2P) network significantly lowers the load that the provider experiences, as participants relay the downloaded content to other participants, eliminating the need that all participants receive their content directly from the source, i.e., the provider. 
-Consequentially, P2P streaming is an attractive option for alternative providers and user-generated content.
-Furthermore, including P2P streaming into the service of established providers will reduce their costs and hence should lead to lower rates for customers or decrease the amount of advertisement within the system, depending on the providers' business model. 
+Streaming content is an essential component of data driven infrastructures \cite{emule}.
+Most streaming applications rely on (monopolistic) central providers that have significant computing and communication resources to distribute high quality of service content to a large audience in a fast and reliable manner. For the providers, this entails the use of dedicated resources, involves performance and scalability issues along with considerations of handling single point of failures.
+Distributing content via a Peer-to-Peer (P2P) network significantly lowers the load that the provider experiences as the participants relay the downloaded content to other participants. This eliminates the need that all participants receive their content directly from the source, i.e., the provider. 
+Consequentially, P2P streaming (including P2P streaming into the service of established providers) becomes an attractive option for alternative distributed providers and user-generated content to help reduce data delivery costs and resultant lower rates for customers.
 
 
-However, achieving reliability in the face of the dynamic heterogeneous group of content distributors in a P2P overlay is challenging. In addition to the inherent unreliability of benign participants, attackers such as competitors can infiltrate the set of peers and perform denial-of-service attacks, which interrupt or delay the distribution of the content with the goal of degrading the quality of service. 
+However, achieving high reliability in a P2P overlay and across a dynamic and heterogeneous group of content distributors is challenging. In addition to the inherent operational unreliability of benign participants, attackers such as competitors can infiltrate the set of peers and conduct denial-of-service attacks. This can interrupt or delay the distribution of the content with the goal of degrading the quality of service. 
 
 In general, nodes in a P2P streaming system connect to a small set of other nodes, called the \emph{neighbor set}. 
-The publisher or the \emph{source} of the content divides the stream into \emph{chunks}, each contains a part of the encoded data, and forwards these chunks to its neighbors. Nodes in the system receive chunks from neighbors and forward them to neighbors that have not previously received the chunks. 
-The selection of neighbors and the choice of which neighbors to receive from or forward to differ between protocols \cite{sasi2014survey}.  Yet, pull-based mesh networks are the predominant method in P2P streaming systems \cite{zhang2014modeling}. In a mesh overlay, peers maintain a buffer-map indicating which chunks they possess.  Neighbors periodically exchange their buffer-maps and request chunks from neighbors whose buffer-maps indicate possession of the respective chunk. Peers then forward chunks based on the received requests. 
+The publisher or \emph{source} of the content divides the stream into \emph{chunks}, which each contain a part of the encoded data, and forwards these chunks to its neighbors. Nodes in the system receive chunks from neighbors and forward them to neighbors that have not previously received the chunks. 
+The selection of neighbors and the choice of neighbors to receive-from or forward-to differs across protocols \cite{sasi2014survey}.  Yet, pull-based mesh networks are the predominant method in P2P streaming systems \cite{zhang2014modeling}. In a mesh overlay, peers maintain a buffer-map indicating which chunks they possess.  Neighbors periodically exchange their buffer-maps and requests chunks from neighbors whose buffer-maps indicate possession of the respective chunk. Peers then forward chunks based on the received requests. 
 
 
-In pull-based systems, there exist three types of denial-of-service attacks, known as buffer-map or $BM$ cheating attacks \cite{cheatingAnalysis}. 
+In pull-based systems, there exist several denial-of-service attacks, known as buffer-map or $BM$ cheating attacks \cite{cheatingAnalysis}. 
 In such an attack, a node might drop or delay chunks. Alternatively, they might advertise chunks that they do not have. As detection of the latter is locally possible and the effect of delaying chunks is at most as severe as entirely dropping the respective chunks, we focus on a denial-of-service attack through dropping chunks without advertising them, called \drop in the following.  
 
 
-In the past, multiple countermeasures aimed to reduce the severity of\drop attack. However, the majority of these defences \cite{zhang2005coolstreaming, defending2, antiliar} assumes that the attacker is unaware of the topology of the streaming network and specifically does not know the \emph{headnodes}, i.e., the peers connected to the source. 
+In the past, multiple countermeasures aimed to reduce the severity \drop. However, the majority of these defences \cite{zhang2005coolstreaming, defending2, antiliar} assume that the attacker is unaware of the topology of the streaming network and specifically does not know the \emph{headnodes}, i.e., the peers connected to the source. 
 However, previous work indicates that it is relatively easy to infer the identity of benign headnodes and then target those important nodes \cite{nguyen2016swap}.
 While countermeasures to these inference attacks exist, they assume an external adversary that can shut-down or replace certain nodes \cite{nguyen2016swap, rbcs, nguyen2014resilience}. 
-Thus, the existing work neither evaluates the impact of internal colluding attackers, i.e., attackers that insert nodes under their control into the system pretending to be regular participants, nor proposes a protection mechanism against these attacks.
+Hence, the existing work neither evaluates the impact of internal colluding attackers, i.e., attackers that insert nodes under their control into the system pretending to be regular participants, nor the protection mechanism against these attacks.
 
 
-In this paper, we  illustrate the effectiveness of internal attacks that benefit from malicious headnodes. 
-Consequentially, we propose a mechanism for detecting \drop. Our protection mechanism keeps track of peers' satisfaction. 
-If the cumulative satisfaction level of a group of peers drops below a certain threshold, the source replaces all headnodes associated with the group with randomly chosen peers. 
-Our detection mechanism hence reacts to a low quality-of-service rather than explicitly identifying the misbehavior of one or more specific nodes.
+In this paper, we first illustrate the effectiveness of internal attacks based on malicious headnodes. 
+Consequently, we propose a mechanism for detecting \drop where our protection mechanism keeps track of peers satisfaction. If the cumulative satisfaction level of a group of peers drops below a certain threshold, the source replaces all headnodes associated with the group with randomly chosen peers. 
+Hence, our detection and mitigation mechanism efficiently reacts to a detected low quality-of-service.
 Note that we focus on attackers that control a low fraction of nodes, as attackers controlling the majority of nodes can trivially control most of the communication, even without gaining strategically important positions such as headnodes.    
 
-In an extensive simulation study, we show that the proposed detection mechanism can fully restore peers' satisfaction, even in a scenario where the attacker controls all headnodes. 
-Our mechanism only introduces a signaling overhead of less than $8\%$, meaning that it is both effective and efficient.
+Using a simulation study, we show that the proposed detection mechanism can fully restore peers satisfaction, even in a scenario where the attacker controls all headnodes. 
+Our mechanism introduces only a small signaling overhead of approximately $8\%$ supporting the claim of being both effective and efficient.
 
-A theoretical analysis complements our concrete practical results, focusing on the opportunities to abuse the detection mechanism. 
+A theoretical analysis complements our practical results, focusing on the opportunities to abuse the detection mechanism. 
 Indeed, the detection algorithm mostly prevents malicious nodes from replacing benign headnodes with malicious nodes unless they control a large fraction of the total number of nodes. 
 Furthermore, maintaining malicious headnodes despite generally low satisfaction levels is not possible for the considered attacker. 
   
-
-
-
 % 
 % at detection malicious behaviors in a fast, low overhead approach while considering the case where the attacker can fully occupy the source's neighbor list with malicious headnodes.
 % In details, peers are able to trigger a request to their neighbors once (a) a peer is, with evidence, performing maliciously, or (b) generally, the stream satisfaction (the user's experience) of a peer drops below a given application threshold.
@@ -55,11 +47,3 @@ Furthermore, maintaining malicious headnodes despite generally low satisfaction 
 % In Section~\ref{sec:Attack}, the concepts underlying the attacker model internal attack and the conducted adversarial behaviors are defined.
 % The detection mechanism is fully discussed in Section~\ref{sec:detection}, with the theoretical analysis is discussed in Section~\ref{sec:analysis}.
 % The internal attack's impact, along with the detection mechanism performance and efficiency, are evaluated in Section~\ref{sec:eval}. Finally, we conclude our work and discuss the future work in Section~\ref{sec:conclusion}.
-
-
-
-
-
- 
-
-
